--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Said-Albujar.github.io.loader.js";
+      var loaderUrl = buildUrl + "/WEB.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Said-Albujar.github.io.data",
-        frameworkUrl: buildUrl + "/Said-Albujar.github.io.framework.js",
-        codeUrl: buildUrl + "/Said-Albujar.github.io.wasm",
+        dataUrl: buildUrl + "/WEB.data",
+        frameworkUrl: buildUrl + "/WEB.framework.js",
+        codeUrl: buildUrl + "/WEB.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Tradicion Arequipeña",
         productName: "El Reto del Rocoto",
